fix: Make sure card flip works on mobile
Mobile browsers calculated transitions differently
bacause of hover background color change

--- a/css/main.css
+++ b/css/main.css
@@ -101,10 +101,6 @@ header {
   box-shadow: inset 0 0 20px 1px #4caf50;
 }
 
-.deck div:active {
-  background-color: #ffff82;
-}
-
 .deck span {
   color: white;
   font-size: 2em;
